--- a/.github/workflows/reflex-chat.yml
+++ b/.github/workflows/reflex-chat.yml
@@ -12,8 +12,10 @@ jobs:
           sudo apt install repo
 
       - name: Setup Kernel Source
+        run: |
           mkdir -p thin && cd thin
           repo init --depth 1 -u https://android.googlesource.com/kernel/manifest -b common-android15-6.6
+
       - name: Pack artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -22,6 +24,7 @@ jobs:
           path: thin
 
       - name: Setup Kernel Source
+         run: |
           cd thin
           repo sync -j$(nproc --all) --no-tags --no-clone-bundle --force-sync
 
