--- a/.github/workflows/reflex-chat.yml
+++ b/.github/workflows/reflex-chat.yml
@@ -32,6 +32,9 @@ jobs:
           repo sync -j$(nproc --all) --no-tags --no-clone-bundle --force-sync
           pwd
           ls -al
+          tar -zcvf android15-6.6-full.tar.gz $(pwd)
+          mkdir ../fulloutput
+          mv android15-6.6-full.tar.gz ../fulloutput
 
       - name: Build
         run: |
@@ -45,5 +48,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: android15-6.6-full
-          compression-level: 9
-          path: thin
+          compression-level: 1
+          path: fulloutput
