--- a/.github/workflows/reflex-chat.yml
+++ b/.github/workflows/reflex-chat.yml
@@ -38,15 +38,9 @@ jobs:
           cd thin
           mkdir ../fulloutput
           tree -a > ../fulloutput/tree.txt
-          dirs=$(ls -a)
-          for i in $dirs; do
-            if [ -z "$(echo $i | sed 's/.//g')" ]; then
-              continue
-            fi
-            tar -zcf dir_$i.tar.gz $i
-            mv dir_$i.tar.gz ../fulloutput
-            echo "$i 打包完毕"
-          done
+          zip -9 -rq mm.zip .
+          mv mm.zip ../fulloutput
+          #
           # tar -zcf android15-6.6-full.tar.gz $(pwd)
           # mv android15-6.6-full.tar.gz ../fulloutput
           
