--- a/.github/workflows/reflex-chat.yml
+++ b/.github/workflows/reflex-chat.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           cd thin
           mkdir ../fulloutput
-          rm -rf common .*
+          rm -rf common .* 2>&1
           tree | tee ../fulloutput/tree.txt
           zip -1 -rq mm.zip .
           mv mm.zip ../fulloutput
